libs/extractor/src/snapshots/extractor__tests__apply_var_typography-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Text} from '@devup-ui/core'\n        <Text\n            typography={({\n                lg: \"buttonLg\",\n                md: \"button\",\n                sm: \"buttonSm\",\n                tag: \"tag\"\n            } as const)[size]}\n        >\n            {children}\n        </Text>\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Typography(
            "button",
        ),
        Typography(
            "buttonLg",
        ),
        Typography(
            "buttonSm",
        ),
        Typography(
            "tag",
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupSpread1, __devupSpread0) => <span className={__devupSpread1}>\n            {__devupSpread0}\n        </span>)({\n\t\"lg\": \"typo-buttonLg\",\n\t\"md\": \"typo-button\",\n\t\"sm\": \"typo-buttonSm\",\n\t\"tag\": \"typo-tag\"\n}[size] || \"\", children);\n",
}
