libs/extractor/src/snapshots/extractor__tests__changed_constants.snap
---
source: libs/extractor/src/lib.rs
expression: outputs
---
[
    "Error: /src/App.tsx:4:22: `css()` cannot use `base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:3:1: `base` is changed here, so the build cannot read it as a constant",
    "Error: /src/App.tsx:5:18: `css()` cannot use `base.p` at build time: its values must be literals, theme tokens or constants, or be computed from them\n/src/App.tsx:3:15: `base` is changed here, so the build cannot read it as a constant",
    "Error: /src/App.tsx:4:23: `<Box>` cannot use `base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:5:29: `styled()` cannot use `base` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:6:22: `css()` cannot use `x ? base : null` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:7:18: Cannot compose `x ? null : [y && base]` at build time: each style must be a rule object, a class, or a condition choosing between them\n/src/App.tsx:7:22: `css()` cannot use `x ? null : [y && base]` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:8:22: `css()` cannot use `...[base]` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/App.tsx:3:10: `base` is handed here to code that may change it, so the build cannot read it as a constant",
    "Error: /src/App.tsx:6:18: `css()` cannot use `baseline` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst colors = { primary: \"red\" };\nconst hover = darken(colors.primary);\nexport const a = <div className=\"a-a\" />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst colors = { primary: \"red\" };\nexport const theme = { colors };\nexport const a = <div className=\"a-a\" />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst colors = { primary: \"red\" };\nexport const theme = { colors };\ntheme.colors.primary = \"blue\";\nexport const a = <div className=\"a-a\" style={{ \"--a\": colors.primary }} />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst loop1 = { x: loop2 };\nconst loop2 = { y: loop1 };\nexport const a = <div className=\"a-a\" style={{ \"--a\": loop1.x.z }} />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst list = [{ p: 1 }];\nwatch(...list);\nexport const a = <div className=\"a-a\" style={{ \"--a\": list[0].p }} />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst flat = [1, 2];\nwatch(...flat);\nexport const a = <div className=\"a-a\" />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst partial = {\n\t...unknown,\n\tp: 1\n};\nwatch(partial.q);\nexport const a = <div className=\"a-a\" style={{ \"--a\": partial.p }} />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst record = { p: 1 };\nwatch(record.q);\nexport const a = <div className=\"a-a\" />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst spread = {\n\t...unknown,\n\tp: 1\n};\nwatch({ ...spread });\nexport const a = <div className=\"a-a\" style={{ \"--a\": spread.p }} />;\n",
    "import \"@devup-ui/react/devup-ui-0.css\";\nexport enum E {\n\tA = 1\n}\nenum F {\n\tB = 2\n}\nexport function g() {}\nvar v = 1;\nconst make = () => ({ p: 1 });\nconst made = make();\nwatch(made);\nconst f = () => made.p;\nexport const a = \"a-b\";\n",
    "Error: /src/App.tsx:6:18: `css()` cannot use `f()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:3:18: `css()` cannot use `pick()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:3:18: `css()` cannot use `brand()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:3:18: `css()` cannot use `node()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "Error: /src/App.tsx:4:18: `css()` cannot use `f()` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    "import \"@devup-ui/react/devup-ui-0.css\";\nimport base, { fixed, colors, grid, renamed } from \"./tokens\";\nimport * as tokens from \"./tokens\";\nexport const a = <div className=\"a-a a-b a-c a-d a-e a-f\" style={{ \"--a\": base.p }} />;\n",
    "Error: /src/App.tsx:3:22: `css()` cannot use `again` at build time: its styles must be an object literal or a constant object, or be computed from constants\n/src/tokens.ts:10:26: `base` is changed here, so the build cannot read it as a constant",
]
